--- a/theme/slick-js.css
+++ b/theme/slick-js.css
@@ -1,10 +1,14 @@
 .slick-slider {
-	margin-bottom: 35px;
+	margin: 0 5px 35px 5px;
 }
 
 .slick-slider img {
 	width: 100%;
 	max-width: 100%;
+}
+
+.slick-slide {
+	padding: 0 10px;
 }
 
 .slick-dots {
@@ -62,7 +66,7 @@
 	color: transparent;
 	background-color: #676767;
 	padding: 0;
-	margin: 17px 0 0 0;
+	margin: -17px 0 0 0;
 	border: none;
 	border-radius: 0;
 	outline: none;
