--- a/examples/slick-theme/client/views/carousel.html
+++ b/examples/slick-theme/client/views/carousel.html
@@ -4,33 +4,33 @@
   </header>
   <div id="carousel">
     <div>
-      <img src="https://unsplash.it/500/300?image=0" align="image 0">
+      <img src="https://unsplash.it/500/300?image=0" alt="image 0">
     </div>
     <div>
-      <img src="https://unsplash.it/500/300?image=1" align="image 1">
+      <img src="https://unsplash.it/500/300?image=1" alt="image 1">
     </div>
     <div>
-      <img src="https://unsplash.it/500/300?image=2" align="image 2">
+      <img src="https://unsplash.it/500/300?image=2" alt="image 2">
     </div>
   </div>
   <div id="carousel-multiple">
     <div>
-      <img src="https://unsplash.it/200/150?image=0" align="image 0">
+      <img src="https://unsplash.it/200/150?image=0" alt="image 0">
     </div>
     <div>
-      <img src="https://unsplash.it/200/150?image=1" align="image 1">
+      <img src="https://unsplash.it/200/150?image=1" alt="image 1">
     </div>
     <div>
-      <img src="https://unsplash.it/200/150?image=2" align="image 2">
+      <img src="https://unsplash.it/200/150?image=2" alt="image 2">
     </div>
     <div>
-      <img src="https://unsplash.it/200/150?image=3" align="image 3">
+      <img src="https://unsplash.it/200/150?image=3" alt="image 3">
     </div>
     <div>
-      <img src="https://unsplash.it/200/150?image=4" align="image 4">
+      <img src="https://unsplash.it/200/150?image=4" alt="image 4">
     </div>
     <div>
-      <img src="https://unsplash.it/200/150?image=5" align="image 5">
+      <img src="https://unsplash.it/200/150?image=5" alt="image 5">
     </div>
   </div>
 </template>
